# youtube_ripper

./: Dockerfile  docker-compose.yml  pyproject.toml
extra/: amazon_db.sql  amazon_product_worker.py  amazon_search_worker.py  amazon_test.py  rabbit_client.py
ripper/: README.md  notes.md  pyproject.toml  secrets.md  ytb_db.sql
ripper/ripper/: 2048.py  sim_2048.py  test.py
ripper_backend/: manage.py
ripper_backend/ripper_backend/: asgi.py  settings.py  urls.py  wsgi.py
ripper_site/: manage.py
ripper_site/ripper_site/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
ripper_site/youtube_portal/: admin.py  apps.py  models.py  selenium_scripts.py  tasks.py  urls.py  views.py
ripper_site/youtube_portal/migrations/: 0001_initial.py  0002_video.py
ripper_site/youtube_portal/templates/youtube_portal/: channels.html  index.html  video.html  videos.html
youtube_scraper/: manage.py
youtube_scraper/youtube_scraper/: asgi.py  settings.py  urls.py  wsgi.py
