[tool.poetry]
name = "ripper"
version = "0.1.0"
description = ""
authors = ["Cassandra Coal <smcphl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.15.2"
requests = "^2.31.0"
mysql-connector-python = "^8.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
