[tool.poetry]
name = "ripper"
version = "0.1.0"
description = ""
authors = ["Cassandra Coal <smcphl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.15.2"
requests = "^2.31.0"
mysql-connector-python = "^8.2.0"
beautifulsoup4 = "^4.12.2"
pika = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
